--- a/config/samples/webapp_v1_canarydeployment.yaml
+++ b/config/samples/webapp_v1_canarydeployment.yaml
@@ -4,4 +4,37 @@ metadata:
   name: canarydeployment-sample
 spec:
   # Add fields here
-  foo: bar
+  commonSpec:
+    replicas: 1 # tells deployment to run 2 pods matching the template
+    selector:
+      matchLabels:
+        app: nginx
+    template: # create pods using pod definition in this template
+      metadata:
+        # unlike pod-nginx.yaml, the name is not included in the meta data as a unique name is
+        # generated from the deployment name
+        labels:
+          app: nginx
+      spec:
+        containers:
+        - name: nginx
+          image: nginx:1.7.9
+          ports:
+          - containerPort: 80
+  appSpecs:
+    newer:
+      Type: merge
+      Spec: '{
+        "template": {
+          "spec": {
+            "containers": [{
+             "name": "nginx",
+              "image": "nginx:1.8.0"
+              }
+            ]
+          }
+        }
+      }'
+    older:
+      Type: merge
+      Spec: '{}'
