--- a/config/samples/webapp_v1_canarydeployment.yaml
+++ b/config/samples/webapp_v1_canarydeployment.yaml
@@ -29,7 +29,7 @@ spec:
           "spec": {
             "containers": [{
              "name": "nginx",
-              "image": "nginx:1.8.0"
+              "image": "nginx:latest"
               }
             ]
           }
